--- a/Gyakorlás/index.html
+++ b/Gyakorlás/index.html
@@ -139,7 +139,7 @@
                 <li><button onclick=firstH2Content()>firstH2Content</button>Írd ki az első <i>h2</i> elem HTML és szöveges tartalmát!</li>
                 <li><button onclick=firstLinkHref()>firstLinkHref</button>Írd ki az első link (&lt;a&gt;) href attribútumát!</li>
                 <li><button onclick=removeHighlightClass()>removeHighlightClass</button>Keress meg minden <code>.highlight</code> osztályú elemet és töröld az osztályt az elemekről!</li>
-                <li>Keresd meg az első <i>ol</i> típusú elemet, és írd ki a szülőelemének és az első gyerekelemének az
+                <li><button onclick=parentAndFirstChild()>parentAndFirstChild</button>Keresd meg az első <i>ol</i> típusú elemet, és írd ki a szülőelemének és az első gyerekelemének az
                     azonosítóját!</li>
             </ol>
         </section>
@@ -147,7 +147,7 @@
         <section id="events">
             <h2>🟦 Eseménykezelés (3 feladat)</h2>
             <ol>
-                <li>A menü első eleméhez adj meg egy eseménykezelőt, amelyre a kattintásra felugró ablakban kiírja a
+                <li><button onclick=menuClickAlert()>menuClickAlert</button>A menü első eleméhez adj meg egy eseménykezelőt, amelyre a kattintásra felugró ablakban kiírja a
                     menüpont tartalmát.</li>
                 <li>Az oldal tetején lévő &lt;input&gt; mezőnél írd ki valós időben a begépelt szöveget a
                     &lt;search-termp&gt; elembe.</li>
