--- a/Gyakorlás/index.html
+++ b/Gyakorlás/index.html
@@ -138,12 +138,20 @@
         <section id="dom-query">
             <h2>🟧 DOM lekérdezések (6 feladat)</h2>
             <ol>
-                <li><button onclick=getDomQuery()>getDomQuery</button>Válaszd ki a "dom-query" azonosítójú <i>section</i> elemet és színezd a hátterét fehérre!</li>
-                <li><button onclick=countOrderedLists()>countOrderedLists</button>Számold meg, hány &lt;ol&gt; elem van az oldalon!</li>
-                <li><button onclick=firstH2Content()>firstH2Content</button>Írd ki az első <i>h2</i> elem HTML és szöveges tartalmát!</li>
-                <li><button onclick=firstLinkHref()>firstLinkHref</button>Írd ki az első link (&lt;a&gt;) href attribútumát!</li>
-                <li><button onclick=removeHighlightClass()>removeHighlightClass</button>Keress meg minden <code>.highlight</code> osztályú elemet és töröld az osztályt az elemekről!</li>
-                <li><button onclick=parentAndFirstChild()>parentAndFirstChild</button>Keresd meg az első <i>ol</i> típusú elemet, és írd ki a szülőelemének és az első gyerekelemének az
+                <li><button onclick=getDomQuery()>getDomQuery</button>Válaszd ki a "dom-query" azonosítójú
+                    <i>section</i> elemet és színezd a hátterét fehérre!
+                </li>
+                <li><button onclick=countOrderedLists()>countOrderedLists</button>Számold meg, hány &lt;ol&gt; elem van
+                    az oldalon!</li>
+                <li><button onclick=firstH2Content()>firstH2Content</button>Írd ki az első <i>h2</i> elem HTML és
+                    szöveges tartalmát!</li>
+                <li><button onclick=firstLinkHref()>firstLinkHref</button>Írd ki az első link (&lt;a&gt;) href
+                    attribútumát!</li>
+                <li><button onclick=removeHighlightClass()>removeHighlightClass</button>Keress meg minden
+                    <code>.highlight</code> osztályú elemet és töröld az osztályt az elemekről!
+                </li>
+                <li><button onclick=parentAndFirstChild()>parentAndFirstChild</button>Keresd meg az első <i>ol</i>
+                    típusú elemet, és írd ki a szülőelemének és az első gyerekelemének az
                     azonosítóját!</li>
             </ol>
         </section>
@@ -151,11 +159,14 @@
         <section id="events">
             <h2>🟦 Eseménykezelés (3 feladat)</h2>
             <ol>
-                <li><button onclick=menuClickAlert()>menuClickAlert</button>A menü első eleméhez adj meg egy eseménykezelőt, amelyre a kattintásra felugró ablakban kiírja a
+                <li><button onclick=menuClickAlert()>menuClickAlert</button>A menü első eleméhez adj meg egy
+                    eseménykezelőt, amelyre a kattintásra felugró ablakban kiírja a
                     menüpont tartalmát.</li>
-                <li><button onclick=copyInput()>copyInput</button>Az oldal tetején lévő &lt;input&gt; mezőnél írd ki valós időben a begépelt szöveget a
+                <li><button onclick=copyInput()>copyInput</button>Az oldal tetején lévő &lt;input&gt; mezőnél írd ki
+                    valós időben a begépelt szöveget a
                     &lt;search-termp&gt; elembe.</li>
-                <li><button onclick=blurOnHover()>blurOnHover</button>az első <i>section</i> elem fölé húzva az egeret, homályosítsd el (filter: blur()) eseménykezelővel.
+                <li><button onclick=blurOnHover()>blurOnHover</button>az első <i>section</i> elem fölé húzva az egeret,
+                    homályosítsd el (filter: blur()) eseménykezelővel.
                 </li>
             </ol>
         </section>
