--- a/06-Óraimunka/index.html
+++ b/06-Óraimunka/index.html
@@ -4,16 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="cars.js"></script>
-    <script src="car.js"></script>
-    <script src="main.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <script src="cars.js" defer></script>
+    <script src="car.js" defer></script>
+    <script src="main.js" defer></script>
 </head>
 <body>
-    <input type="text" name="text-box" id="text-box " placeholder="Szöveg">
-
+    <input type="text" name="text-box" id="text-box" placeholder="Szöveg">
     <select></select>
-
-    <div></div>
-
+    <div id="container"></div>
 </body>
 </html>
