--- a/06-Óraimunka/index.html
+++ b/06-Óraimunka/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<html lang="hu">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Cars</title>
     <script src="cars.js" defer></script>
     <script src="car.js" defer></script>
     <script src="main.js" defer></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <input type="text" name="text-box" id="text-box" placeholder="Szöveg">
     <select></select>
     <div id="container"></div>
 </body>
