--- a/Gyakorlás/Doga2 gyak/06-built-in/string/index.html
+++ b/Gyakorlás/Doga2 gyak/06-built-in/string/index.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>String metódusok</title>
     <link rel="stylesheet" href="style.css">
-    <script src="../../lib/console/console.js" type="module" defer></script>
-    <script src="../../lib/util.js" type="module" defer></script>
-    <script src="js-string-01.js" type="module" defer></script>
+    <link rel="stylesheet" href="../../lib/console/console.css">
+    <script src="main.js" type="module" defer></script>
 </head>
 <body>
     <h1>String metódusok használata</h1>
