--- a/07-built-in/array/index.html
+++ b/07-built-in/array/index.html
@@ -1,21 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Webprogramozás</title>
-    <link rel="stylesheet" href="index-style.css">
+    <title>Array metódusok</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../../lib/console/console.css">
     <script src="main.js" type="module" defer></script>
 </head>
-
 <body>
-    <div id="nav">
-        <h2>Webprogramozás</h2>
-        <nav>
-        </nav>
-    </div>
-    <main id="content"></main>
+    <h1>Array metódusok használata</h1>
 </body>
-
 </html>
