--- a/ng210/03-alapok/index.html
+++ b/ng210/03-alapok/index.html
@@ -6,7 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MMA harcosok</title>
     <link rel="stylesheet" href="style.css">
-    <script src="main.js" type="module"></script>
+    <script src="main-m.js" type="module"></script>
+    <!-- <script src="diakok/Adi-main.js" type="module"></script> -->
+    <!-- <script src="diakok/main1-zm.js" type="module"></script> -->
+    <!-- <script src="diakok/main-antalarmin.js" type="module"></script> -->
+    <!-- <script src="diakok/main-bazsopatrik.js" type="module"></script> -->
+    <!-- <script src="diakok/main-FacekasBertalan.js" type="module"></script> -->
+    <!-- <script src="diakok/main-hgi.js" type="module"></script> -->
+    <!-- <script src="diakok/main-HorváthKevin.js" type="module"></script> -->
+    <!-- <script src="diakok/main-Katona-TothMarton.js" type="module"></script> -->
+    <!-- <script src="diakok/main-kovirichard.js" type="module"></script> -->
+    <!-- <script src="diakok/main-molnaralex.js" type="module"></script> -->
+    <!-- <script src="diakok/main-nemethmiklos.js.js" type="module"></script> -->
+    <!-- <script src="diakok/main-szakalybalint.js" type="module"></script> -->
+    <!-- <script src="diakok/Sari_David_main.js" type="module"></script> -->
+    <!-- <script src="diakok/szabi.js" type="module"></script> -->
 </head>
 
 <body>
