--- a/06-built-in/index.html
+++ b/06-built-in/index.html
@@ -11,8 +11,8 @@
 
 <body>
     <div id="nav">
-        <h1>Webprogramozás</h1>
-        <h2>Built-in objektumok</h2>
+        <h1 class="title">Webprogramozás</h1>
+        <h2 class="title">Built-in objektumok</h2>
         <nav>
         </nav>
     </div>
